# Image_Search

./: .gitignore  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  ml_models.py  models.py
backend/: Dockerfile  app.py  configs.py  ml_models.py  requirements.txt  search.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html
docs/site/getting-started/: index.html
docs/site/search/: search_index.json
frontend/: Dockerfile  main.py
image_search/: __init__.py  config.py  dataset.py  features.py  main.py  plots.py
image_search/modeling/: predict.py  train.py
