[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Image_Search"
version = "0.0.1"
description = "image serch based on user query"
authors = [
  { name = "Ness FuseMachines" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["Image_Search"]
include = ["pyproject.toml", "Image_Search/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Image_Search"]
force-sort-within-sections = true

